# ITVDN_CPP

./: .gitignore  cmd_command
CPP_Advanced/001_ Type inference using templates, auto and decltype_/001_Samples/: CMakeLists.txt  CMakeLists.txt.user.20  CMakeLists.txt.user.4.8-pre1  main.cpp
CPP_Advanced/004_Standard_template_library_and_Iterators_and_Algorithms/004_Samples/: Makefile
CPP_Advanced/005_Parallel_programming_and_Streams_and_means_of_their_synchronization/005_Samples/: Makefile
CPP_Advanced/007_Rvalue_Links_Movement_Semantics_and_Direct_Transfer/007_Samples/: main.cpp
CPP_Advanced/008_Design_Patterns_CPP/008_Samples/: CMakeLists.txt  builder.cpp  builder.h  decorator.cpp  decorator.h  facade.cpp  facade.h  main.cpp  meta_strategy.h  modernobserver.cpp  modernobserver.h  oldobserver.cpp  oldobserver.h  patterns.h  strategy.cpp  strategy.h
CPP_Advanced/009_Metaprogramming/009_Samples/: CMakeLists.txt  main.cpp
CPP_Advanced/010_Useful_innovations_CPP17/010_Samples/: CMakeLists.txt  Makefile  inlinevariables.cpp  inlinevariables.h  main.cpp
CPP_Advanced/011_Work_files/011_Samples/: CMakeLists.txt  CMakeLists.txt.user.20  main.cpp
CPP_Essential/002_Class_and_object/002_Samples/: main.cpp  mammal.cpp  mammal.h
CPP_Essential/003_Inheritance_polymorphism/003_Samples/: Makefile  cat.cpp  cat.h  main.cpp
CPP_Essential/004_Multiple_Inheritance/004_Samples/: Makefile  cat.h  main.cpp
other/How_to_Create_a_Simple_Makefile/: Makefile  main.cpp  message.cpp  message.h
other/SimpleMakefileTutorial/: hellofunc.c  hellomake.c  hellomake.h
(+562 files in other folders)
